# py-eightctl

./: .gitignore  README.md  pyproject.toml
src/py_eightctl/: __init__.py  __main__.py  cli.py
src/py_eightctl/eightsleep/: __init__.py  client.py  config.py  errors.py  models.py  service.py  temperature.py
tests/: test_client.py  test_config.py  test_temperature.py
